# waitlist

./: .gitignore  README.md  build.spec  main.py  pyproject.toml
.github/workflows/: ci.yml
.kiro/specs/waitlist-contact-manager/: .config.kiro  design.md  requirements.md  tasks.md
src/: app.py  db.py  tray.py  validators.py
static/: script.js  style.css
templates/: base.html  import.html  index.html
tests/: test_main.py  test_properties.py  test_tray.py  test_ui.py  test_validators.py
